@startuml
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam shadowing false
skinparam monochrome true

class ArrayLinearList {
    - Object[] element
    - int size
    + ArrayLinearList()
    + void add(int index, Object obj)
    + Object get(int index)
    + Object remove(int index)
    + int size()
    + boolean isEmpty()
}

class Lessons {
    + Subject learned
    + int score
    + Lessons(Subject learned, int score)
}

class Major {
    + String code
    + String name
    + Major(String code, String name)
    + String toString()
}

class Student {
    + String code
    + float GPA
    + Chain lessons
    + Student(String code)
}

class Subject {
    + String code
    + String name
    + float credit
    + Subject(String code, String name, float credit)
    + String toString()
}

class Chain {
    - ChainNode firstNode
    - int size
    + Chain()
    + void add(int index, Object element)
    + Object get(int index)
    + Object remove(int index)
    + int size()
    + boolean isEmpty()
}

class ChainNode {
    - Object element
    - ChainNode next
}

class Registration {
    + ArrayLinearList studentList
    + ArrayLinearList subjectList
    + ArrayLinearList majorList
    - String subjectsFile
    - String majorsFile
    - String examsFile
    + Registration()
    + void loadSubjects()
    + void loadMajors()
    + void loadExams()
    + void addExamRecord(String studentCode, String subjectCode, int score)
    + void deleteExamRecord(String studentCode, String subjectCode)
    + void showAverageGPA()
    + void showStudentsWithMultipleF()
    + void showSubjectsBySubject()
    + void showSubjectsByMajor()
    + void adminAddSubject(String code, String name, float credit)
    + void adminAddMajor(String code, String name)
}

class Main {
    + void main(String[] args)
    - void adminMenu(Registration registration, Scanner scanner)
}

Registration --> ArrayLinearList
Registration --> Student
Registration --> Subject
Registration --> Major
Registration --> Lessons

Student --> Chain
Chain *-- ChainNode
Lessons --> Subject
Main --> Registration
@enduml
